Import of GERHARD/LaTeX-ToUnicode-0.03 from CPAN.
gitpan-cpan-distribution: LaTeX-ToUnicode
gitpan-cpan-version:      0.03
gitpan-cpan-path:         GERHARD/LaTeX-ToUnicode-0.03.tar.gz
gitpan-cpan-author:       GERHARD
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -6,10 +6,14 @@ build_requires: {}
 configure_requires:
   ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.101880, CPAN::Meta::Converter version 2.101670'
+generated_by: 'Dist::Zilla version 4.102342, CPAN::Meta::Converter version 2.101670'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: LaTeX-ToUnicode
-version: 0.02
+requires:
+  perl: 5.8.0
+resources:
+  repository: http://github.com/gerhardgossen/latex-tounicode
+version: 0.03
