--- a/dist.ini
+++ b/dist.ini
@@ -3,9 +3,14 @@ author  = Gerhard Gossen <gerhard.gossen@googlemail.com>
 license = Perl_5
 copyright_holder = Gerhard Gossen
 copyright_year   = 2010
-version = 0.02
+version = 0.03
 
 [@Classic]
+[Prereqs]
+perl = 5.8.0
 [NextRelease]
+format = %-7v %{yyyy-MM-dd HH:mm:ss}d
 [PodWeaver]
+[Repository]
 [@Git]
+[SynopsisTests]
